server/src/main/assets/stylesheets/main.less
@import "ourbootstrap.less";
@import "lib/font-awesome/less/font-awesome.less";
@import "popover-styles.less";
@import "popover-styles-staff-movement.less";
@import 'handsontable.full.css';
@import 'tippy.css';
@import 'tippy-themes/light.css';
@import 'tippy-themes/light-border.css';
@import 'tippy-themes/material.css';
@import 'tippy-themes/translucent.css';

/////////////////
// Custom navbar
/////////////////

@bgDefault: #f8f8f8;
@bgHighlight: #dddddd;

@colDefault: #333333;
@colHighlight: #666666;
@dropDown: false;
.ddm() when (@dropDown) {
  > .dropdown-menu {
    background-color: @bgDefault;

    > li {
      > a {
        color: @colDefault;

        &:hover, &:focus {
          color: @colHighlight;
          background-color: @bgHighlight;
        }
      }

      &.divider {
        background-color: @bgHighlight;
      }
    }
  }
}

ul.dropdown-menu > li.dropdown-item > span.non-selectable {
  color: @colDefault;
  font-weight: bold;
  margin: 0;
  padding: 3px 20px;
  display: block;
}

ul.dropdown-menu > li.dropdown-item > span.region {
  padding: 3px 10px;
}

ul.dropdown-menu > li.dropdown-item > span.port {
  background-color: @bgHighlight;
}

.mui-textfield-date-input {
  font-family: Roboto, Helvetica, Arial, sans-serif;
  font-weight: 400;
  font-size: 17px;
  box-sizing: border-box;
  cursor: text;
  -webkit-box-align: center;
  align-items: center;
  border-radius: 4px;
  padding-right: 14px;
  border-width: 1px;
  padding: 16px 24px;
  flex: 0 0 auto;
  background-color: rgb(255, 255, 255);
  color: rgba(0, 0, 0, 0.87);
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  position: relative;
  overflow-y: auto;
  display: flex;
  line-height: 1.3;
}

.navbar-default {
  background-color: @bgDefault;
  border-color: @bgHighlight;
  border-radius: 0px;
  border-left: 0px;
  border-right: 0px;

  .navbar-brand {
    color: black;

    &:hover, &:focus {
      color: black;
    }
  }

  .navbar-text {
    color: @colDefault;
  }

  .navbar-nav {
    > li {
      > a {
        color: @colDefault;

        &:hover, &:focus {
          color: @colHighlight;
        }
      }

      > span {
        > a {
          color: @colDefault;

          &:hover, &:focus {
            color: @colHighlight;
            text-decoration: none;
            cursor: pointer;
          }
        }
      }

      .ddm;

      > span {
        padding: 15px;
        display: block;
      }
    }

    > .active {
      > a, > a:hover, > a:focus {
        color: @colHighlight;
        background-color: @bgHighlight;
      }
    }

    > .open {
      > a, > a:hover, > a:focus {
        color: @colHighlight;
        background-color: @bgHighlight;
      }
    }
  }

  .navbar-toggle {
    border-color: @bgHighlight;

    &:hover, &:focus {
      background-color: @bgHighlight;
    }

    .icon-bar {
      background-color: @colDefault;
    }
  }

  .navbar-collapse,
  .navbar-form {
    border-color: @colDefault;
  }

  .navbar-link {
    color: @colDefault;

    &:hover {
      color: @colHighlight;
    }
  }
}

.navbar-right {
    margin-left : 10px;
    float : right !important;
}


.navbar-nav li.red .fa-bar-chart {
  color: #f55;
}

.navbar-nav li.amber .fa-bar-chart {
  color: #F7901E;
}

.navbar-nav li.green .fa-bar-chart {
  color: #008000;
}

@media (max-width: 800px){
    .table-flex {
        display: flex;
        flex-wrap: wrap;
    }
}

@media (max-width: 800px) {
  .navbar-default .navbar-nav .open .dropdown-menu {
    > li > a {
      color: @colDefault;

      &:hover, &:focus {
        color: @colHighlight;
      }
    }

    > .active {
      > a, > a:hover, > a:focus {
        color: @colHighlight;
        background-color: @bgHighlight;
      }
    }
  }
}

.dropdown-menu {
  margin-top: -2px;
}

/////////////

.main-logo {
  height: 70px;
  width: 220px;
  float: left;
  background-image: url(../images/logo_colour.png);
  background-repeat: no-repeat;
  background-position: 0px 15px;
}

.popover.flights-popover .popover__content > tr td {
  color: #000;
}

.staff-deployment-adjustment-container {
  position: relative;
  display: inline-block;
}

.view-mode-content {
  clear: left;
  position: relative;
}

a:hover {
  cursor: pointer;
}

.modal-header {
  text-align: left;
}

.modal-footer {
  margin-top: 10px;
  padding: 6px;
}

.multi-day-export-links {
  text-align: left;
  margin-left: 59px;
}

.multi-day-export__error {
  text-align: left;
  padding: 5px;
  margin: 8px;
  background-color: #f2dede;
  border-color: #ebccd1;
  color: #a94442;
}

.multi-day-export .modal-content, .arrivals-export .modal-content {
  margin-top: 15%;
  min-width: 30%;
}

.arrivals-export .modal-content a, .multi-day-export .modal-content a {
  width: 100%;
}

.date .form-group.row .date-field {
  float: left;
}

.date .form-group.row .col-form-label {
  margin-top: 7px;
  margin-left: 10px;
}

.date .form-group.row .day {
  width: auto;
}

.date .form-group.row .month {
  width: auto;
}

.date .form-group.row .year {
  width: auto;
}

.date-view-picker-container {
  display: flex;
  padding: 10px 17px 0 0;
  color: #333;
  font-size: 16px;
  margin-bottom: 20px;
}

.date-view-picker-container .time-range {
  padding-top: 10px;
}

.date-view-picker-container select {
  color: black;
}

.date-time-picker-container {
  position: relative;
  display: inline-block;
}


#staffing div .row {
  margin: 0px;
}

#staffing div .row div {
  float: left;
  margin: 15px;
}

#staffing div .row div label, #planning div .row div label {
  margin-top: 7px;
}

.staff-deployment-adjustment-container .popover-trigger {
  display: inline-block;
  padding: 4px;
  font-size: 12px;
}

.nav .popover-trigger {
  padding: 6px 12px;
  font-size: 14px;
}

.loading {
  filter: blur(5px);
}

.notice-box {
  position: fixed;
  right: 1%;
  top: 1%
}

.notice-box a {
  color: #f00;
}

div.planning-week {
  width: 650px;
  margin-left: 0px;
  margin-top: 20px;
  margin-bottom: 20px;
}
/* ... */

